<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="6dp"
    android:elevation="6dp"
    app:cardUseCompatPadding="true"
    tools:targetApi="lollipop">

    <RelativeLayout
        android:id="@+id/reltaivelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">


        <TextView
            android:id="@+id/vehiclenumtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/vehicle_number"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/typeofvoiltv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vehiclenumtv"
            android:layout_margin="10dp"
            android:text="@string/type_of_voilation"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timetv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/typeofvoiltv"
            android:layout_margin="10dp"
            android:text="@string/time"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/datelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timetv"
            android:layout_margin="10dp"
            android:text="@string/date"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amounttvupadtechallna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/datelayout"
            android:layout_margin="10dp"
            android:text="@string/amount"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold" />


    </RelativeLayout>




</androidx.cardview.widget.CardView>